test: ride index page displays created at date

--- a/app/views/rides/index.html.erb
+++ b/app/views/rides/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Rides</h1>
 
 <% @rides.each do |ride| %>
-  <p><%= ride.name %></p>
+  <p><%= ride.name %> made at: <%= ride.created_at %></p>
 <% end  %>
