feat: displays passenger count.

--- a/app/views/rides/show.html.erb
+++ b/app/views/rides/show.html.erb
@@ -4,3 +4,4 @@
 <p>Is the car full? <%= @ride.full %></p>
 <p>created: <%= @ride.created_at %></p>
 <p>updated: <%= @ride.updated_at %></p>
+<p>Number of passengers: <%= @ride.passengers.count %></p>
