--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
   </head>
 
   <body>
-    
+    <%= link_to "Passengers", passengers_path %>
+    <%= link_to "Rides", rides_path %>
     <%= yield %>
   </body>
 </html>
