--- a/app/views/rides/index.html.erb
+++ b/app/views/rides/index.html.erb
@@ -3,3 +3,5 @@
 <% @rides.each do |ride| %>
   <p><%= ride.name %> made at: <%= ride.created_at %></p>
 <% end  %>
+
+<%= link_to "New Ride", '/rides/new' %>
