test: create passenger

--- a/app/views/ride_passengers/new.html.erb
+++ b/app/views/ride_passengers/new.html.erb
@@ -1,12 +1,12 @@
 <h1>Create a Passenger </h1>
-<%= form_with url: '/rides', method: :post, local: true do |form|%>
+<%= form_with url: '/passengers', method: :post, local: true do |form|%>
   <%= form.label :name %>
   <%= form.text_field :name %>
-  <%= form.label :seats %>
-  <%= form.number_field :seats, in: 1..5 %>
-  <%= form.radio_button :full, "True" %>
+  <%= form.label :age %>
+  <%= form.text_field :age %>
+  <%= form.radio_button :single, "True" %>
   <%= form.label :single, "Passenger is single" %>
-  <%= form.radio_button :full, "False" %>
+  <%= form.radio_button :single, "False" %>
   <%= form.label :single, "Passenger is not single" %>
   <%= form.submit "Create Passenger" %>
 
