--- a/app/views/passengers/show.html.erb
+++ b/app/views/passengers/show.html.erb
@@ -4,3 +4,4 @@
 <p>Single? <%= @passenger.single %></p>
 <p>created: <%= @passenger.created_at %></p>
 <p>updated: <%= @passenger.updated_at %></p>
+<%= link_to  "Update Passenger", "/passengers/#{@passenger.id}/edit" %>
