feat: Ride index page has links to edit each Ride

--- a/app/views/rides/index.html.erb
+++ b/app/views/rides/index.html.erb
@@ -2,6 +2,7 @@
 
 <% @rides.each do |ride| %>
   <p><%= ride.name %> made at: <%= ride.created_at %></p>
+  <p><%= link_to "Edit #{ride.name}", "/rides/#{ride.id}/edit"  %></p>
 <% end  %>
 
 <%= link_to "New Ride", '/rides/new' %>
