feat: Edit passengers on both index pages

--- a/app/views/passengers/index.html.erb
+++ b/app/views/passengers/index.html.erb
@@ -3,6 +3,8 @@
   <h3><%= passenger.name %></h3>
   <p>How old?: <%= passenger.age %></p>
   <p>Is flying solo? <%= passenger.single %></p>
-  <p>not sure why you want this but its the created at: <%= passenger.created_at %></p>
-  <p>not sure why you want this but its the updated at: <%= passenger.updated_at %></p>
+  <p>created at: <%= passenger.created_at %></p>
+  <p>updated at: <%= passenger.updated_at %></p>
+  <p><%= link_to "Edit #{passenger.name}", "/passengers/#{passenger.id}/edit"  %></p>
+  <hr>
 <% end  %>
