--- a/app/views/rides/show.html.erb
+++ b/app/views/rides/show.html.erb
@@ -7,3 +7,4 @@
 <p>updated: <%= @ride.updated_at %></p>
 <p>Number of passengers: <%= @ride.passengers.count %></p>
 <%= link_to  "Update Ride", "/rides/#{@ride.id}/edit" %>
+<%= link_to  'DELETE FOREVER', "/rides/#{@ride.id}", method: "delete" %>
