feat: Delete link next to every ride

--- a/app/views/rides/index.html.erb
+++ b/app/views/rides/index.html.erb
@@ -3,6 +3,8 @@
 <% @rides.each do |ride| %>
   <p><%= ride.name %> made at: <%= ride.created_at %></p>
   <p><%= link_to "Edit #{ride.name}", "/rides/#{ride.id}/edit"  %></p>
+  <p><%= link_to  "DELETE #{ride.name}" , "/rides/#{ride.id}", method: "delete" %>
+</p>
 <% end  %>
 
 <%= link_to "New Ride", '/rides/new' %>
